Add subtotal value.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h2>Enter some percentages that add up to 100%.</h2>
 
     <div id="total-container">
-    <progress id="total" max="100" value="0"></progress>
-
+    <progress id="total" max="100" value="0"></progress> <span id="subtotal">0%</span>
     <form id="totaliser">
 
       <div class="answer">
